<resources>
    <string name="app_name">Computadoras</string>
    <string name="action_settings">Settings</string>
    <string name="brand">Marca</string>
    <string name="ram">RAM</string>
    <string name="color">Color</string>
    <string name="type">Tipo</string>
    <string name="os">OS</string>

    <string name="levono">Levono</string>
    <string name="hp">HP</string>
    <string name="dell">Dell</string>
    <string name="apple">Apple</string>

    <string-array name="brand_array">
        <item>@string/levono</item>
        <item>@string/hp</item>
        <item>@string/dell</item>
        <item>@string/apple</item>
    </string-array>

    <string name="red">Rojo</string>
    <string name="gray">Gris</string>
    <string name="black">Negro</string>
    <string name="white">Blanco</string>

    <string-array name="color_array">
        <item>@string/red</item>
        <item>@string/gray</item>
        <item>@string/black</item>
        <item>@string/white</item>
    </string-array>

    <string name="desktop">Escritorio</string>
    <string name="laptop">Portatil</string>

    <string-array name="type_array">
        <item>@string/desktop</item>
        <item>@string/laptop</item>
    </string-array>

    <string name="windows">Windows</string>
    <string name="linux">Linux</string>
    <string name="macOS">macOS</string>

    <string-array name="os_array">
        <item>@string/windows</item>
        <item>@string/linux</item>
        <item>@string/macOS</item>
    </string-array>


    <string name="add_computer">AGREGAR COMPUTADORA</string>
    <string name="saved_successfully">Guardado Exitosamente!</string>
    <string name="cant_be_blank">El campo no puede estar vacio</string>
    <string name="delete">Eliminar!</string>
    <string name="are_you_sure">¿Está seguro que desea elminar a este computador?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="computer_already_exits">Ya existe un computador con estas caracteristicas</string>
    <string name="save">Guardar</string>
    <string name="clear">Limpiar</string>
    <string name="information">INFORMACION</string>
    <string name="delete_computer">Eliminar Computador</string>
</resources>
